[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/dashboard.gd" type="Script" id=1]

[node name="dashboard" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 594.0

[node name="TextEdit" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 33.0
margin_top = 107.0
margin_right = 560.0
margin_bottom = 512.0
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
bookmark_gutter = true
breakpoint_gutter = true
fold_gutter = true
highlight_all_occurrences = true
override_selected_font_color = true
smooth_scrolling = true
wrap_enabled = true
minimap_draw = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 564.0
margin_top = 3.0
margin_right = 600.0
margin_bottom = 593.0

[node name="textopions" type="OptionButton" parent="."]
margin_left = 15.0
margin_top = 7.0
margin_right = 560.0
margin_bottom = 65.0

[node name="upload_code" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 46.0
margin_top = 537.0
margin_right = 190.0
margin_bottom = 572.0
text = "upload"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="openlinks" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 323.0
margin_top = 537.0
margin_right = 467.0
margin_bottom = 572.0
text = "open browser"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="refcode" type="Button" parent="."]
margin_left = 37.0
margin_top = 68.0
margin_right = 181.0
margin_bottom = 103.0
text = "ref code"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="images" type="Button" parent="."]
margin_left = 740.0
margin_top = 183.0
margin_right = 880.0
margin_bottom = 302.0
text = "ikmages"

[node name="cfilename" type="LineEdit" parent="."]
margin_left = 198.0
margin_top = 72.0
margin_right = 543.0
margin_bottom = 99.0
placeholder_text = "filename"

[connection signal="item_selected" from="textopions" to="." method="_on_textopions_item_selected"]
[connection signal="pressed" from="upload_code" to="." method="_on_upload_code_pressed"]
[connection signal="pressed" from="refcode" to="." method="_on_refcode_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="images" to="." method="_on_images_pressed"]
